
        [[release-notes-x.x.x]]
        ==== x.x.x - YYYY/MM/DD
////

[[release-notes-3.x]]
=== Node.js Agent version 3.x


==== Unreleased

[float]
===== Breaking changes

[float]
===== Features

* Improve the TypeScript types by exporting more of interfaces:
  `AgentConfigOptions`, `Transaction`, `Span`, `TransactionOptions`,
  `SpanOptions`. ({issues}2118[#2118])

[float]
===== Bug fixes

* Fix a crash in instrumentation of the old Elasticsearch client
  (`elasticsearch`) for some rarer cases of client options -- for example
  passing multiple hosts. ({pull}2312[#2312])

* Ensure the internal HTTP(S) client requests made by the APM agent to APM
  server are not themselves traced. ({issues}1168[#1168], {issues}1136[#1136])

* Fix crashing error with `agent.registerMetric` and `active:false` configuration. ({issues}1799[#1799], {pull}2290[#2290])


[[release-notes-3.20.0]]
==== 3.20.0 2021/08/12

[float]
===== Bug fixes

* Fix failing tests and a possible runtime crash in
  `@elastic/elasticsearch@7.14.0` instrumentation. ({issues}2187[#2187])


[[release-notes-3.19.0]]
==== 3.19.0 2021/08/05

[float]
===== Features

* The agent now supports the 3.x branch of apollo-server-express. ({pull}2155[#2155])

* Add instrumentation support for mongodb@4.x. ({pull}2171[#2171])

[float]
===== Bug fixes

* The agent will no longer report counting metrics with a value of zero, and will
  remove these metrics from the registry. ({pull}2163[#2163])


[[release-notes-3.18.0]]
==== 3.18.0 2021/07/20

[float]
===== Features

* Trace an incoming HTTP/1.1 request to an HTTP/2 server using the
  https://nodejs.org/api/http2.html#http2_http2_createsecureserver_options_onrequesthandler[allowHTTP1]
  option. Before this change only incoming requests supporting HTTP/2 would
  be traced. ({pull}2143[#2143])

* Add instrumentation of the AWS SNS publish method when using the
  https://www.npmjs.com/package/aws-sdk[JavaScript AWS SDK v2] (`aws-sdk`). ({pull}2157[#2157])

[float]