@@ -34,9 +34,11 @@ class NamedArray {
     const array = this.get(key)
     if (array) {
       const index = array.indexOf(value)
-      array.splice(index, 1)
-      if (!array.length) {
-        this.clear(key)
+      if (index !== -1) {
+        array.splice(index, 1)
+        if (!array.length) {
+          this.clear(key)
+        }
       }
     }
   }
